--- a/TravelSuggesting/package.json
+++ b/TravelSuggesting/package.json
@@ -8,7 +8,11 @@
 	},
 	"dependencies": {
 		"react": "16.0.0-alpha.12",
-		"react-native": "0.48.2"
+		"react-native": "0.48.2",
+		"react-native-elements": "^0.16.0",
+		"react-native-star-rating": "^1.0.8",
+		"react-native-tab-navigator": "^0.3.4",
+		"react-native-vector-icons": "^4.3.0"
 	},
 	"devDependencies": {
 		"babel-jest": "21.0.2",
